--- a/travel.css
+++ b/travel.css
@@ -555,6 +555,9 @@
     .input-content{
         display: none;
     }
+    .map{
+        height: 120vh;
+    }
     .map-form{
         width: 300px;
         height: 80%;
